[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autocli"
authors = [
    {email = "mhorky@redhat.com"},
]
description = "A CLI autogeneration tool using OpenAPI blueprints"
readme = "README.md"
keywords = ["OpenAPI", "Swagger"]
license = {text = "MIT"}
dependencies = []
dynamic = ["version"]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]

[project.scripts]
autocli = "autocli.cli:main"

[tool.setuptools.dynamic]
version = {attr = "autocli.__about__.VERSION"}
